--- a/html/index.html
+++ b/html/index.html
@@ -10,7 +10,7 @@
 <body>
   <div class="video-container">
     <video class="bg-video" autoplay muted loop playsinline>
-      <source src="Video/background.mp4" type="video/mp4" />
+      <source src="../assets/background.mp4" type="video/mp4" />
     </video>
     <div class="video-overlay"></div>
   </div>
@@ -19,7 +19,7 @@
     <nav class="nav-container">
       <div class="brand-logo">
         <a href="index.html">
-          <img src="Images/Logo.png" alt="Yuktesh Enterprises Logo" class="logo-img" />
+          <img src="../assets/Logo.png" alt="Yuktesh Enterprises Logo" class="logo-img" />
         </a>
       </div>
 
@@ -66,15 +66,15 @@
     </div>
     <div class="product-gallery">
       <div class="product-item">
-        <img src="Images/brick1.jpeg" alt="Premium Cement Brick" />
+        <img src="../assets/brick1.jpeg" alt="Premium Cement Brick" />
         <p>Premium Cement Brick</p>
       </div>
       <div class="product-item">
-        <img src="Images/brick2.webp" alt="High-Density Block" />
+        <img src="../assets/brick2.webp" alt="High-Density Block" />
         <p>High-Density Block</p>
       </div>
       <div class="product-item">
-        <img src="Images/brick3.avif" alt="Eco-Friendly Brick" />
+        <img src="../assets/brick3.avif" alt="Eco-Friendly Brick" />
         <p>Eco-Friendly Brick</p>
       </div>
     </div>
