--- a/html/index.html
+++ b/html/index.html
@@ -81,6 +81,75 @@
     <a href="#" class="see-more">See More</a>
   </section>
 
+
+
+  <!-- Why Chosse Us -->
+  <section class="Choose-us">
+    <h2> Why Choose Us</h2>
+    <div class="grid">
+      <div class="feature-item">
+        <img src="./Images/link.png" alt="Strength Icon" class="feature-icon">
+        <h3> 1.Superior Strength & Durability</h3>
+        <p>Our cement bricks are engineered to last for decades, providing unmatched structural integrity for any type
+          of construction.</p>
+      </div>
+      <div class="feature-item">
+        <img src="./Images/eco-friendly.png" alt="Eco-Friendly" class="feature-icon">
+        <h3>2. Eco-Friendly Manufacturing Process</h3>
+        <p>We use sustainable practices and materials that reduce environmental impact compared to traditional clay
+          bricks.</p>
+      </div>
+      <div class="feature-item">
+        <img src="./Images/precision.png" alt="precision" class="feature-icon">
+        <h3>3. Precision and Uniformity</h3>
+        <p>All our bricks are machine-pressed, ensuring uniform shape, size, and a smooth finish that reduces plastering
+          cost.</p>
+      </div>
+      <div class="feature-item">
+        <img src="./Images/innovation.png" alt="Cost-Effective" class="feature-icon">
+        <h3>4. Cost-Effective Solutions</h3>
+        <p>Cement bricks are more affordable in the long run due to lower maintenance and reduced mortar/plaster
+          requirements.</p>
+      </div>
+      <div class="feature-item">
+        <img src="./Images/water-resistant.png" alt="water Resistant" class="feature-icon">
+        <h3>5. Water & Fire Resistant</h3>
+        <p>Our bricks provide excellent resistance to water seepage and fire, ensuring safety and long-term performance.
+        </p>
+      </div>
+      <div class="feature-item">
+        <img src="./Images/speed.png" alt="Faster Construction" class="feature-icon">
+        <h3>6. Faster Construction</h3>
+        <p>With precise dimensions and smooth surfaces, our bricks enable faster laying and reduce construction time
+          significantly.</p>
+      </div>
+      <div class="feature-item">
+        <img src="./Images/customize.png" alt="Bulk Orders " class="feature-icon">
+        <h3>7. Custom Sizes & Bulk Orders Available</h3>
+        <p>We cater to all types of projects with custom sizes and timely bulk supply—perfect for contractors and
+          builders.</p>
+      </div>
+      <div class="feature-item">
+        <img src="./Images/recording.png" alt="Track Record" class="feature-icon">
+        <h3>8. Proven Track Record</h3>
+        <p>Trusted by leading builders and construction firms for residential, commercial, and industrial projects.</p>
+      </div>
+      <div class="feature-item">
+        <img src="./Images/on-time.png" alt="On-Time Delivery" class="feature-icon">
+        <h3>9. On-Time Delivery & Reliable Support</h3>
+        <p>Our logistics network ensures your bricks are delivered safely and promptly, with dedicated customer service
+          to support you.</p>
+      </div>
+      <div class="feature-item">
+        <img src="./Images/search.png" alt="Tested" class="feature-icon">
+        <h3>10. Tested & Certified Quality</h3>
+        <p>Every batch undergoes strict quality checks to meet industry standards and exceed client expectations.</p>
+      </div>
+    </div>
+   </div>
+  </section>
+
+
   <section class="order-management">
     <div class="order-wrapper">
       <h2>Place Your Order</h2>
