--- a/html/master.html
+++ b/html/master.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Yuktesh Enterprises Cement Brick Solutions</title>
-  <link rel="stylesheet" href="../css/style.css" />
+  <link rel="stylesheet" href="../css/master.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"/>
 </head>
 <body>
@@ -18,7 +18,7 @@
   <header class="header">
     <nav class="nav-container">
       <div class="brand-logo">
-        <a href="index.html">
+        <a href="master.html">
           <img src="../assets/Logo.png" alt="Yuktesh Enterprises Logo" class="logo-img" />
         </a>
       </div>
@@ -31,12 +31,12 @@
       </div>
 
       <ul class="navigation" id="mobileMenu">
-        <li><a href="#" class="nav-link">Home</a></li>
+        <li><a href="master.html" class="nav-link">Home</a></li>
         <li><a href="#" class="nav-link">About Us</a></li>
         <li><a href="#" class="nav-link">Products</a></li>
         <li><a href="#" class="nav-link">Manufacturing Process</a></li>
         <li><a href="#" class="nav-link">Order Management</a></li>
-        <li><a href="#" class="nav-link">Our Team</a></li>
+        <li><a href="employee.html" class="nav-link">Our Team</a></li>
         <li><a href="#" class="nav-link">Contact Us</a></li>
       </ul>
     </nav>
@@ -234,12 +234,12 @@
       <div class="footer-column">
         <h3>Quick Links</h3>
         <ul class="footer-links">
-          <li><a href="#">Home</a></li>
+          <li><a href="master.html">Home</a></li>
           <li><a href="#">About Us</a></li>
           <li><a href="#">Products</a></li>
           <li><a href="#">Manufacturing Process</a></li>
           <li><a href="#">Order Management</a></li>
-          <li><a href="#">Our Team</a></li>
+          <li><a href="employee.html">Our Team</a></li>
           <li><a href="#">Contact Us</a></li>
         </ul>
       </div>
@@ -255,6 +255,6 @@
       </div>
     </div>
   </footer>
-  <script src="../js/script.js"></script>
+  <script src="../js/master.js"></script>
 </body>
 </html>
