--- a/html/employee.html
+++ b/html/employee.html
@@ -31,8 +31,9 @@
                 <ul class="navigation" id="mobileMenu">
                     <li><a href="master.html" class="nav-link">Home</a></li>
                     <li><a href="#" class="nav-link">About Us</a></li>
-                    <li><a href="#" class="nav-link">services</a></li>
-                    <li><a href="#" class="nav-link">Portfolio</a></li>
+                    <li><a href="#" class="nav-link">Products</a></li>
+                    <li><a href="#" class="nav-link">Manufacturing Process</a></li>
+                    <li><a href="#" class="nav-link">Order Management</a></li>
                     <li><a href="#" class="nav-link">Our Team</a></li>
                     <li><a href="#" class="nav-link">Contact Us</a></li>
                 </ul>
@@ -74,9 +75,10 @@
                     <ul>
                         <li><a href="master.html">Home</a></li>
                         <li><a href="#about">About Us</a></li>
-                        <li><a href="#services">Services</a></li>
-                        <li><a href="#portfolio">Portfolio</a></li>
-                        <li><a href="#blog">Blog</a></li>
+                        <li><a href="#services">Products</a></li>
+                        <li><a href="#portfolio">Manufacturing Process</a></li>
+                        <li><a href="#blog">Order Management</a></li>
+                        <li><a href="employee.html">Our Team</a></li>
                         <li><a href="#contact">Contact Us</a></li>
                     </ul>
                 </div>
