--- a/html/master.html
+++ b/html/master.html
@@ -219,42 +219,66 @@
     </div>
   </div>
   </section>
+  
+      <footer class="footer">
+        <div class="footer-container">
+            <div class="footer-content">
+                <div class="footer-section">
+                    <h3>Quick Links</h3>
+                    <ul>
+                        <li><a href="master.html">Home</a></li>
+                        <li><a href="#about">About Us</a></li>
+                        <li><a href="#services">Products</a></li>
+                        <li><a href="#portfolio">Manufacturing Process</a></li>
+                        <li><a href="#blog">Order Management</a></li>
+                        <li><a href="employee.html">Our Team</a></li>
+                        <li><a href="#contact">Contact Us</a></li>
+                    </ul>
+                </div>
 
-  <footer class="custom-footer">
-    <div class="footer-container">
-      <div class="footer-column">
-        <h3>YUKTESH ENTERPRISES</h3>
-        <p>Dwaraka Mindspace, Plot No.28,<br>
-        Survey No. 8 & 9, Gafoornagar,<br>
-        Hitech City, Near Westin Hotel,<br>
-        Hyderabad, Telangana - 500081.</p>
-        <p><strong>Phone:</strong> +91 9985752406</p>
-        <p><strong>Email:</strong> contactus@yuktesh.com</p>
-      </div>
-      <div class="footer-column">
-        <h3>Quick Links</h3>
-        <ul class="footer-links">
-          <li><a href="master.html">Home</a></li>
-          <li><a href="#">About Us</a></li>
-          <li><a href="#">Products</a></li>
-          <li><a href="#">Manufacturing Process</a></li>
-          <li><a href="#">Order Management</a></li>
-          <li><a href="employee.html">Our Team</a></li>
-          <li><a href="#">Contact Us</a></li>
-        </ul>
-      </div>
+                <div class="footer-section">
+                    <h3>Services</h3>
+                    <ul>
+                        <li><a href="#web-design">Web Design</a></li>
+                        <li><a href="#development">Development</a></li>
+                        <li><a href="#seo">SEO Optimization</a></li>
+                        <li><a href="#marketing">Digital Marketing</a></li>
+                        <li><a href="#consulting">Consulting</a></li>
+                        <li><a href="#support">24/7 Support</a></li>
+                    </ul>
+                </div>
 
-      <div class="footer-column">
-        <h3>Follow Us</h3>
-        <div class="social-icons">
-          <a href="#"><i class="fab fa-facebook-f"></i></a>
-          <a href="#"><i class="fab fa-twitter"></i></a>
-          <a href="#"><i class="fab fa-instagram"></i></a>
-          <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                <div class="footer-section">
+                    <h3>Connect With Us</h3>
+                    <p>Join our community and stay updated with the latest trends and innovations.</p>
+                    <div class="social-icons">
+                        <a href="#" class="social-icon facebook">f</a>
+                        <a href="#" class="social-icon twitter">X</a>
+                        <a href="#" class="social-icon instagram">i</a>
+                        <a href="#" class="social-icon linkedin">ln</a>
+                        <a href="#" class="social-icon youtube">Y</a>
+                    </div>
+                </div>
+
+                <div class="footer-section">
+                    <h3>Contact Info</h3>
+                    <p>123 Business Avenue, Mumbai</p>
+                    <p>Maharashtra, India 400001</p>
+                    <p>Phone: +91 22 1234 5678</p>
+                    <p>Email: info@yukteshenterprises.com</p>
+                </div>
+            </div>
+
+            <div class="footer-bottom">
+                <div class="footer-links">
+                    <a href="#privacy">Privacy Policy</a>
+                    <a href="#terms">Terms of Service</a>
+                    <a href="#cookies">Cookie Policy</a>
+                </div>
+                <p>&copy; 2023 Yuktesh Enterprises. All rights reserved.</p>
+            </div>
         </div>
-      </div>
-    </div>
-  </footer>
+    </footer>
   <script src="../js/master.js"></script>
 </body>
 </html>
