--- a/html/master.html
+++ b/html/master.html
@@ -37,7 +37,7 @@
         <li><a href="#" class="nav-link">Manufacturing Process</a></li>
         <li><a href="#" class="nav-link">Order Management</a></li>
         <li><a href="employee.html" class="nav-link">Our Team</a></li>
-        <li><a href="#" class="nav-link">Contact Us</a></li>
+        <li><a href="./contactUs.html" class="nav-link">Contact Us</a></li>
       </ul>
     </nav>
   </header>
