--- a/html/contactUs.html
+++ b/html/contactUs.html
@@ -82,8 +82,8 @@
     </div>
 
     <div class="info">
-      <p><i class="fas fa-envelope"></i> hello@yourdomain.com</p>
-      <p><i class="fas fa-phone"></i> +1 (555) 123-4567</p>
+      <p><i class="mail"></i> info@yukteshenterprises.com</p>
+      <p><i class="phone"></i> +91 22 1234 5678</p>
     </div>
 
     <div class="social-icons">
