--- a/html/employee.html
+++ b/html/employee.html
@@ -34,8 +34,8 @@
                     <li><a href="#" class="nav-link">Products</a></li>
                     <li><a href="#" class="nav-link">Manufacturing Process</a></li>
                     <li><a href="#" class="nav-link">Order Management</a></li>
-                    <li><a href="#" class="nav-link">Our Team</a></li>
-                    <li><a href="./contactUs.html" class="nav-link">Contact Us</a></li>
+                    <li><a href="../html/employee.html" class="nav-link">Our Team</a></li>
+                    <li><a href="../contactUs.html" class="nav-link">Contact Us</a></li>
                 </ul>
             </nav>
         </header>
@@ -78,8 +78,8 @@
                         <li><a href="#services">Products</a></li>
                         <li><a href="#portfolio">Manufacturing Process</a></li>
                         <li><a href="#blog">Order Management</a></li>
-                        <li><a href="employee.html">Our Team</a></li>
-                        <li><a href="#contact">Contact Us</a></li>
+                        <li><a href="../html/employee.html">Our Team</a></li>
+                        <li><a href="../html/contactUs.html">Contact Us</a></li>
                     </ul>
                 </div>
 
