--- a/html/master.html
+++ b/html/master.html
@@ -232,7 +232,7 @@
                         <li><a href="#portfolio">Manufacturing Process</a></li>
                         <li><a href="#blog">Order Management</a></li>
                         <li><a href="employee.html">Our Team</a></li>
-                        <li><a href="#contact">Contact Us</a></li>
+                        <li><a href="../html/contactUs.html">Contact Us</a></li>
                     </ul>
                 </div>
 
