--- a/html/contactUs.html
+++ b/html/contactUs.html
@@ -39,7 +39,7 @@
         <li><a href="#" class="nav-link">Manufacturing Process</a></li>
         <li><a href="#" class="nav-link">Order Management</a></li>
         <li><a href="./employee.html" class="nav-link">Our Team</a></li>
-        <li><a href="#" class="nav-link">Contact Us</a></li>
+        <li><a href="../html/contactUs.html" class="nav-link">Contact Us</a></li>
       </ul>
     </nav>
   </header>
@@ -97,63 +97,64 @@
   </div>
 
   <footer class="footer">
-    <div class="footer-container">
-      <div class="footer-content">
-        <div class="footer-section">
-          <h3>Quick Links</h3>
-          <ul>
-            <li><a href="#home">Home</a></li>
-            <li><a href="#about">About Us</a></li>
-            <li><a href="#services">Services</a></li>
-            <li><a href="#portfolio">Portfolio</a></li>
-            <li><a href="#blog">Blog</a></li>
-            <li><a href="#contact">Contact Us</a></li>
-          </ul>
-        </div>
+        <div class="footer-container">
+            <div class="footer-content">
+                <div class="footer-section">
+                    <h3>Quick Links</h3>
+                    <ul>
+                        <li><a href="master.html">Home</a></li>
+                        <li><a href="#about">About Us</a></li>
+                        <li><a href="#services">Products</a></li>
+                        <li><a href="#portfolio">Manufacturing Process</a></li>
+                        <li><a href="#blog">Order Management</a></li>
+                        <li><a href="../html/employee.html">Our Team</a></li>
+                        <li><a href="../html/contactUs.html">Contact Us</a></li>
+                    </ul>
+                </div>
 
-        <div class="footer-section">
-          <h3>Services</h3>
-          <ul>
-            <li><a href="#web-design">Web Design</a></li>
-            <li><a href="#development">Development</a></li>
-            <li><a href="#seo">SEO Optimization</a></li>
-            <li><a href="#marketing">Digital Marketing</a></li>
-            <li><a href="#consulting">Consulting</a></li>
-            <li><a href="#support">24/7 Support</a></li>
-          </ul>
-        </div>
+                <div class="footer-section">
+                    <h3>Services</h3>
+                    <ul>
+                        <li><a href="#web-design">Web Design</a></li>
+                        <li><a href="#development">Development</a></li>
+                        <li><a href="#seo">SEO Optimization</a></li>
+                        <li><a href="#marketing">Digital Marketing</a></li>
+                        <li><a href="#consulting">Consulting</a></li>
+                        <li><a href="#support">24/7 Support</a></li>
+                    </ul>
+                </div>
 
-        <div class="footer-section">
-          <h3>Connect With Us</h3>
-          <p>Join our community and stay updated with the latest trends and innovations.</p>
-          <div class="social-icons">
-            <a href="#" class="social-icon facebook">f</a>
-            <a href="#" class="social-icon twitter">X</a>
-            <a href="#" class="social-icon instagram">i</a>
-            <a href="#" class="social-icon linkedin">ln</a>
-            <a href="#" class="social-icon youtube">Y</a>
-          </div>
-        </div>
+                <div class="footer-section">
+                    <h3>Connect With Us</h3>
+                    <p>Join our community and stay updated with the latest trends and innovations.</p>
+                    <div class="social-icons">
+                        <a href="#" class="social-icon facebook">f</a>
+                        <a href="#" class="social-icon twitter">X</a>
+                        <a href="#" class="social-icon instagram">i</a>
+                        <a href="#" class="social-icon linkedin">ln</a>
+                        <a href="#" class="social-icon youtube">Y</a>
+                    </div>
+                </div>
 
-        <div class="footer-section">
-          <h3>Contact Info</h3>
-          <p>123 Business Avenue, Mumbai</p>
-          <p>Maharashtra, India 400001</p>
-          <p>Phone: +91 22 1234 5678</p>
-          <p>Email: info@yukteshenterprises.com</p>
-        </div>
-      </div>
+                <div class="footer-section">
+                    <h3>Contact Info</h3>
+                    <p>123 Business Avenue, Mumbai</p>
+                    <p>Maharashtra, India 400001</p>
+                    <p>Phone: +91 22 1234 5678</p>
+                    <p>Email: info@yukteshenterprises.com</p>
+                </div>
+            </div>
 
-      <div class="footer-bottom">
-        <div class="footer-links">
-          <a href="#privacy">Privacy Policy</a>
-          <a href="#terms">Terms of Service</a>
-          <a href="#cookies">Cookie Policy</a>
+            <div class="footer-bottom">
+                <div class="footer-links">
+                    <a href="#privacy">Privacy Policy</a>
+                    <a href="#terms">Terms of Service</a>
+                    <a href="#cookies">Cookie Policy</a>
+                </div>
+                <p>&copy; 2023 Yuktesh Enterprises. All rights reserved.</p>
+            </div>
         </div>
-        <p>&copy; 2023 Yuktesh Enterprises. All rights reserved.</p>
-      </div>
-    </div>
-  </footer>
+    </footer>
   <script src="./script.js"></script>
 </body>
 
