--- a/html/employee.html
+++ b/html/employee.html
@@ -40,7 +40,7 @@
             <li>
               <a href="../html/employee.html" class="nav-link">Our Team</a>
             </li>
-            <li><a href="../contactUs.html" class="nav-link">Contact Us</a></li>
+            <li><a href="../html/contactUs.html" class="nav-link">Contact Us</a></li>
           </ul>
         </nav>
       </header>
