--- a/html/employee.html
+++ b/html/employee.html
@@ -38,7 +38,7 @@
             <li><a href="#" class="nav-link">Manufacturing Process</a></li>
             <li><a href="#" class="nav-link">Order Management</a></li>
             <li>
-              <a href="../html/employee.html" class="nav-link">Our Team</a>
+              <a href="../html/employee.html" class="nav-link nav-active">Our Team</a>
             </li>
             <li>
               <a href="../html/contactUs.html" class="nav-link">Contact Us</a>
