--- a/html/contactUs.html
+++ b/html/contactUs.html
@@ -127,7 +127,7 @@
             </ul>
           </div>
 
-          <div class="footer-section">
+          <!-- <div class="footer-section">
             <h3>Services</h3>
             <ul>
               <li><a href="#web-design">Web Design</a></li>
@@ -137,7 +137,7 @@
               <li><a href="#consulting">Consulting</a></li>
               <li><a href="#support">24/7 Support</a></li>
             </ul>
-          </div>
+          </div> -->
 
           <div class="footer-section">
             <h3>Connect With Us</h3>
