--- a/html/contactUs.html
+++ b/html/contactUs.html
@@ -164,7 +164,7 @@
       </div>
     </div>
   </footer>
-  <script src="./script.js"></script>
+  <script src="../js/contact.js"></script>
 </body>
 
 </html>
