--- a/html/employee.html
+++ b/html/employee.html
@@ -32,16 +32,28 @@
           </div>
 
           <ul class="navigation" id="mobileMenu">
-            <li><a href="master.html" class="nav-link">Home</a></li>
-            <li><a href="#" class="nav-link">About Us</a></li>
-            <li><a href="#" class="nav-link">Products</a></li>
-            <li><a href="#" class="nav-link">Manufacturing Process</a></li>
-            <li><a href="#" class="nav-link">Order Management</a></li>
             <li>
-              <a href="../html/employee.html" class="nav-link nav-active">Our Team</a>
+              <a href="master.html" class="nav-link" id="nav-home">Home</a>
+            </li>
+            <li><a href="#" class="nav-link" id="nav-about">About Us</a></li>
+            <li><a href="#" class="nav-link" id="nav-products">Products</a></li>
+            <li>
+              <a href="#" class="nav-link" id="nav-manufacturing"
+                >Manufacturing Process</a
+              >
             </li>
             <li>
-              <a href="../html/contactUs.html" class="nav-link">Contact Us</a>
+              <a href="#" class="nav-link" id="nav-orders">Order Management</a>
+            </li>
+            <li>
+              <a href="../html/employee.html" class="nav-link" id="nav-team"
+                >Our Team</a
+              >
+            </li>
+            <li>
+              <a href="../html/contactUs.html" class="nav-link" id="nav-contact"
+                >Contact Us</a
+              >
             </li>
           </ul>
         </nav>
@@ -65,31 +77,32 @@
           <span class="search-icon">🔍</span>
         </div>
 
-        <div class="department-filter">
-          <button class="filter-btn active" data-department="all">
-            All Departments
-          </button>
-          <button class="filter-btn" data-department="leadership">
-            Leadership
-          </button>
-          <button class="filter-btn" data-department="engineering">
-            Engineering
-          </button>
-          <button class="filter-btn" data-department="sales">
-            Sales & Marketing
-          </button>
-          <button class="filter-btn" data-department="operations">
-            Operations
-          </button>
-          <button class="filter-btn" data-department="hr">
-            Human Resources
-          </button>
-        </div>
+        <div class="white-overlay-section">
+          <div class="department-filter">
+            <button class="filter-btn active" data-department="all">
+              All Departments
+            </button>
+            <button class="filter-btn" data-department="leadership">
+              Leadership
+            </button>
+            <button class="filter-btn" data-department="engineering">
+              Engineering
+            </button>
+            <button class="filter-btn" data-department="sales">
+              Sales & Marketing
+            </button>
+            <button class="filter-btn" data-department="operations">
+              Operations
+            </button>
+            <button class="filter-btn" data-department="hr">
+              Human Resources
+            </button>
+          </div>
 
-        <div class="staff-grid" id="staffGrid"></div>
+          <div class="staff-grid" id="staffGrid"></div>
+        </div>
       </div>
     </div>
-
     <footer class="footer">
       <div class="footer-container">
         <div class="footer-content">
@@ -103,18 +116,6 @@
               <li><a href="#blog">Order Management</a></li>
               <li><a href="../html/employee.html">Our Team</a></li>
               <li><a href="../html/contactUs.html">Contact Us</a></li>
-            </ul>
-          </div>
-
-          <div class="footer-section">
-            <h3>Services</h3>
-            <ul>
-              <li><a href="#web-design">Web Design</a></li>
-              <li><a href="#development">Development</a></li>
-              <li><a href="#seo">SEO Optimization</a></li>
-              <li><a href="#marketing">Digital Marketing</a></li>
-              <li><a href="#consulting">Consulting</a></li>
-              <li><a href="#support">24/7 Support</a></li>
             </ul>
           </div>
 
