--- a/html/contactUs.html
+++ b/html/contactUs.html
@@ -86,7 +86,7 @@
           <textarea required rows="4" id="message" placeholder=""></textarea>
           <label>What do you have in mind?</label>
         </div>
-        <button type="submit">Send Message</button>
+        <button type="submit" id="submit">Send Message</button>
       </form>
       <div class="info">
         <p class="mail">
