--- a/html/employee.html
+++ b/html/employee.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Staff Directory - Yuktesh Enterprises</title>
     <link rel="stylesheet" href="../css/employee.css" />
+    <script
+      src="https://kit.fontawesome.com/ebf68a0b4f.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
 
   <body>
@@ -33,27 +37,21 @@
 
           <ul class="navigation" id="mobileMenu">
             <li>
-              <a href="master.html" class="nav-link" id="nav-home">Home</a>
+              <a href="master.html" class="nav-link">Home</a>
             </li>
-            <li><a href="#" class="nav-link" id="nav-about">About Us</a></li>
-            <li><a href="#" class="nav-link" id="nav-products">Products</a></li>
+            <li><a href="#" class="nav-link">About Us</a></li>
+            <li><a href="#" class="nav-link">Products</a></li>
             <li>
-              <a href="#" class="nav-link" id="nav-manufacturing"
-                >Manufacturing Process</a
-              >
+              <a href="#" class="nav-link">Manufacturing Process</a>
             </li>
             <li>
-              <a href="#" class="nav-link" id="nav-orders">Order Management</a>
+              <a href="#" class="nav-link">Order Management</a>
             </li>
             <li>
-              <a href="../html/employee.html" class="nav-link" id="nav-team"
-                >Our Team</a
-              >
+              <a href="../html/employee.html" class="nav-link">Our Team</a>
             </li>
             <li>
-              <a href="../html/contactUs.html" class="nav-link" id="nav-contact"
-                >Contact Us</a
-              >
+              <a href="../html/contactUs.html" class="nav-link">Contact Us</a>
             </li>
           </ul>
         </nav>
@@ -74,7 +72,9 @@
             placeholder="Search staff members..."
             id="searchInput"
           />
-          <span class="search-icon">🔍</span>
+          <span class="search-icon"
+            ><i class="fa-solid fa-magnifying-glass"></i
+          ></span>
         </div>
 
         <div class="white-overlay-section">
