--- a/html/master.html
+++ b/html/master.html
@@ -6,6 +6,10 @@
   <title>Yuktesh Enterprises Cement Brick Solutions</title>
   <link rel="stylesheet" href="../css/master.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"/>
+   <script
+      src="https://kit.fontawesome.com/ebf68a0b4f.js"
+      crossorigin="anonymous"
+    ></script>
 </head>
 <body>
   <div class="video-container">
@@ -181,35 +185,35 @@
     <p class="faq-description">Find answers to common questions about our cement brick products and services.</p>
 
     <div class="faq-item">
-      <div class="faq-question">What types of cement do you manufacture?</div>
+      <div class="faq-question">What types of cement do you manufacture?<i class="icon fa-solid fa-caret-down"></i></div>
       <div class="faq-answer">
         We manufacture a range of cement types including Ordinary Portland Cement (OPC), Portland Pozzolana Cement (PPC), Portland Slag Cement (PSC), and specialty cements for specific applications. Please refer to our Products page for detailed specifications.
       </div>
     </div>
 
     <div class="faq-item">
-      <div class="faq-question">Where are your manufacturing plants located?</div>
+      <div class="faq-question">Where are your manufacturing plants located?<i class="icon fa-solid fa-caret-down"></i></div>
       <div class="faq-answer">
         Our manufacturing units are strategically located across [mention regions or countries] to ensure efficient distribution and availability. Visit our Locations page for more information.
       </div>
     </div>
 
     <div class="faq-item">
-      <div class="faq-question">How can I place a bulk order?</div>
+      <div class="faq-question">How can I place a bulk order?<i class="icon fa-solid fa-caret-down"></i></div>
       <div class="faq-answer">
         For bulk orders or B2B purchases, please contact our sales team via our Contact page or email us at [sales@yourcompany.com]. You can also fill out the inquiry form online, and we’ll get back to you promptly.
       </div>
     </div>
 
     <div class="faq-item">
-      <div class="faq-question">Do you offer delivery services?</div>
+      <div class="faq-question">Do you offer delivery services?<i class="icon fa-solid fa-caret-down"></i></div>
       <div class="faq-answer">
         Yes, we provide reliable delivery services for both bulk and retail orders. Delivery timelines and charges may vary depending on your location. Our team will coordinate logistics to ensure timely supply.
       </div>
     </div>
 
     <div class="faq-item">
-      <div class="faq-question">Are your products certified?</div>
+      <div class="faq-question">Are your products certified?<i class="icon fa-solid fa-caret-down"></i></div>
       <div class="faq-answer">
         Absolutely. Our cement products comply with national and international standards, including [mention ISO, BIS, ASTM, etc.]. We also maintain strict quality control throughout the manufacturing process.
       </div>
