--- a/html/master.html
+++ b/html/master.html
@@ -36,12 +36,12 @@
 
       <ul class="navigation" id="mobileMenu">
         <li><a href="master.html" class="nav-link">Home</a></li>
-        <li><a href="#" class="nav-link">About Us</a></li>
+        <li><a href="aboutUs.html" class="nav-link">About Us</a></li>
         <li><a href="#" class="nav-link">Products</a></li>
         <li><a href="#" class="nav-link">Manufacturing Process</a></li>
         <li><a href="#" class="nav-link">Order Management</a></li>
         <li><a href="employee.html" class="nav-link">Our Team</a></li>
-        <li><a href="./contactUs.html" class="nav-link">Contact Us</a></li>
+        <li><a href="contactUs.html" class="nav-link">Contact Us</a></li>
       </ul>
     </nav>
   </header>
@@ -228,12 +228,12 @@
                     <h3>Quick Links</h3>
                     <ul>
                         <li><a href="master.html">Home</a></li>
-                        <li><a href="#about">About Us</a></li>
+                        <li><a href="aboutUs.html">About Us</a></li>
                         <li><a href="#services">Products</a></li>
                         <li><a href="#portfolio">Manufacturing Process</a></li>
                         <li><a href="#blog">Order Management</a></li>
                         <li><a href="employee.html">Our Team</a></li>
-                        <li><a href="../html/contactUs.html">Contact Us</a></li>
+                        <li><a href="contactUs.html">Contact Us</a></li>
                     </ul>
                 </div>
 
