--- a/html/aboutUs.html
+++ b/html/aboutUs.html
@@ -3,26 +3,19 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Contact Us</title>
-    <link rel="stylesheet" href="../css/contactUs.css" />
+    <title>About Us | Yuktesh Enterprises</title>
+    <link rel="stylesheet" href="../css/master.css" />
     <link
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
       rel="stylesheet"
-    />
-  </head>
-
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Contact Us</title>
-    <link rel="stylesheet" href="../css/contactUs.css" />
-    <link
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
-      rel="stylesheet"
     />
+    <script
+      src="https://kit.fontawesome.com/ebf68a0b4f.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
-
   <body>
+    <!-- Background video -->
     <div class="video-container">
       <video class="bg-video" autoplay muted loop playsinline>
         <source src="../assets/background.mp4" type="video/mp4" />
@@ -30,10 +23,11 @@
       <div class="video-overlay"></div>
     </div>
 
+    <!-- Navbar -->
     <header class="header">
       <nav class="nav-container">
         <div class="brand-logo">
-          <a href="index.html">
+          <a href="master.html">
             <img
               src="../assets/Logo.png"
               alt="Yuktesh Enterprises Logo"
@@ -50,67 +44,70 @@
 
         <ul class="navigation" id="mobileMenu">
           <li><a href="master.html" class="nav-link">Home</a></li>
-          <li><a href="aboutUs.html" class="nav-link">About Us</a></li>
+          <li><a href="about.html" class="nav-link active">About Us</a></li>
           <li><a href="#" class="nav-link">Products</a></li>
           <li><a href="#" class="nav-link">Manufacturing Process</a></li>
           <li><a href="#" class="nav-link">Order Management</a></li>
-          <li><a href="./employee.html" class="nav-link">Our Team</a></li>
+          <li><a href="employee.html" class="nav-link">Our Team</a></li>
           <li><a href="contactUs.html" class="nav-link">Contact Us</a></li>
         </ul>
       </nav>
     </header>
-    <div class="container">
-      <div class="contact-box">
-        <h1>Contact Us</h1>
-        <p>
-          We'd love to hear from you. Send us a message and we'll respond as
-          soon as possible.
-        </p>
-        <form id="contactForm">
-          <div class="form-row">
-            <div class="form-group">
-              <input type="text" id="firstName" placeholder="" required />
-              <label>First Name</label>
-              <span class="error" id="firstNameError"></span>
-            </div>
-            <div class="form-group">
-              <input type="text" id="lastName" placeholder="" required />
-              <label>Last Name</label>
-              <span class="error" id="lastNameError"></span>
-            </div>
-          </div>
-          <div class="form-row">
-            <div class="form-group">
-              <input type="email" id="mail" placeholder="" required />
-              <label>Email</label>
-              <span class="error" id="emailError"></span>
-            </div>
-            <div class="form-group">
-              <input type="text" id="phone" placeholder="" required />
-              <label>Phone Number</label>
-              <span class="error" id="phoneError"></span>
-            </div>
-          </div>
-          <div class="form-group full">
-            <textarea required rows="4" id="message" placeholder=""></textarea>
-            <label class="message-box">What do you have in mind?</label>
-          </div>
-          <button type="submit" id="submit">Send Message</button>
-        </form>
-        <div class="info">
-          <p class="mail">
-            <i class="fas fa-envelope"></i> info@yukteshenterprises.com
-          </p>
-          <p><i class="fas fa-phone"></i> +91 22 1234 5678</p>
-        </div>
 
-        <div class="social-icons">
-          <a href="#"><i class="fab fa-twitter"></i></a>
-          <a href="#"><i class="fab fa-facebook-f"></i></a>
-          <a href="#"><i class="fab fa-google"></i></a>
-        </div>
+    <!-- About Us Content -->
+    <main class="main-content">
+      <div class="content-wrapper">
+        <h1 class="main-title">About Yuktesh Enterprises</h1>
+        <p class="subtitle">
+          Crafting excellence in every brick, with decades of dedication and
+          trust.
+        </p>
       </div>
-    </div>
+    </main>
+
+    <section class="company-intro">
+      <div class="intro-content">
+        <h2>Who We Are</h2>
+        <p>
+          Yuktesh Enterprises is a leading manufacturer of cement bricks,
+          dedicated to innovation and quality in construction solutions. Our
+          journey started with a simple vision—to provide durable and
+          sustainable building materials at scale.
+        </p>
+        <h2>Our Mission</h2>
+        <p>
+          To empower construction with eco-friendly, high-performance cement
+          bricks, while maintaining a customer-first approach and unmatched
+          reliability.
+        </p>
+        <h2>Our Vision</h2>
+        <p>
+          To become India’s most trusted name in cement solutions through
+          continuous innovation, integrity, and industry leadership.
+        </p>
+        <h2>Our Values</h2>
+        <ul style="text-align: left; max-width: 700px; margin: auto">
+          <li>
+            <strong>Integrity:</strong> We act with honesty and transparency in
+            everything we do.
+          </li>
+          <li>
+            <strong>Innovation:</strong> We believe in continuous improvement
+            and embracing new ideas.
+          </li>
+          <li>
+            <strong>Quality:</strong> Every brick we make reflects our
+            commitment to excellence.
+          </li>
+          <li>
+            <strong>Customer Commitment:</strong> We strive to build lasting
+            relationships by understanding and serving our customers' needs.
+          </li>
+        </ul>
+      </div>
+    </section>
+
+    <!-- Footer -->
     <footer class="footer">
       <div class="footer-container">
         <div class="footer-content">
@@ -118,15 +115,14 @@
             <h3>Quick Links</h3>
             <ul>
               <li><a href="master.html">Home</a></li>
-              <li><a href="aboutUs.html">About Us</a></li>
-              <li><a href="#services">Products</a></li>
-              <li><a href="#portfolio">Manufacturing Process</a></li>
-              <li><a href="#blog">Order Management</a></li>
+              <li><a href="about.html">About Us</a></li>
+              <li><a href="#">Products</a></li>
+              <li><a href="#">Manufacturing Process</a></li>
+              <li><a href="#">Order Management</a></li>
               <li><a href="employee.html">Our Team</a></li>
               <li><a href="contactUs.html">Contact Us</a></li>
             </ul>
           </div>
-
           <div class="footer-section">
             <h3>Connect With Us</h3>
             <p>
@@ -141,7 +137,6 @@
               <a href="#" class="social-icon youtube">Y</a>
             </div>
           </div>
-
           <div class="footer-section">
             <h3>Contact Info</h3>
             <p>123 Business Avenue, Mumbai</p>
@@ -150,7 +145,6 @@
             <p>Email: info@yukteshenterprises.com</p>
           </div>
         </div>
-
         <div class="footer-bottom">
           <div class="footer-links">
             <a href="#privacy">Privacy Policy</a>
@@ -161,6 +155,8 @@
         </div>
       </div>
     </footer>
-    <script src="../js/contact.js"></script>
+
+    <!-- Script -->
+    <script src="../js/master.js"></script>
   </body>
 </html>
