--- a/html/employee.html
+++ b/html/employee.html
@@ -39,7 +39,7 @@
             <li>
               <a href="master.html" class="nav-link">Home</a>
             </li>
-            <li><a href="#" class="nav-link">About Us</a></li>
+            <li><a href="aboutUs.html" class="nav-link">About Us</a></li>
             <li><a href="#" class="nav-link">Products</a></li>
             <li>
               <a href="#" class="nav-link">Manufacturing Process</a>
@@ -48,10 +48,10 @@
               <a href="#" class="nav-link">Order Management</a>
             </li>
             <li>
-              <a href="../html/employee.html" class="nav-link">Our Team</a>
+              <a href="employee.html" class="nav-link">Our Team</a>
             </li>
             <li>
-              <a href="../html/contactUs.html" class="nav-link">Contact Us</a>
+              <a href="contactUs.html" class="nav-link">Contact Us</a>
             </li>
           </ul>
         </nav>
@@ -110,12 +110,12 @@
             <h3>Quick Links</h3>
             <ul>
               <li><a href="master.html">Home</a></li>
-              <li><a href="#about">About Us</a></li>
+              <li><a href="aboutUs.html">About Us</a></li>
               <li><a href="#services">Products</a></li>
               <li><a href="#portfolio">Manufacturing Process</a></li>
               <li><a href="#blog">Order Management</a></li>
-              <li><a href="../html/employee.html">Our Team</a></li>
-              <li><a href="../html/contactUs.html">Contact Us</a></li>
+              <li><a href="employee.html">Our Team</a></li>
+              <li><a href="contactUs.html">Contact Us</a></li>
             </ul>
           </div>
 
