--- a/html/aboutUs.html
+++ b/html/aboutUs.html
@@ -54,7 +54,6 @@
       </nav>
     </header>
 
-    <!-- About Us Content -->
     <main class="main-content">
       <div class="content-wrapper">
         <h1 class="main-title">About Yuktesh Enterprises</h1>
@@ -156,7 +155,7 @@
       </div>
     </footer>
 
-    <!-- Script -->
+    <!-- JavaScript -->
     <script src="../js/master.js"></script>
   </body>
 </html>
